# ProgressiveShadingAQP

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  config.txt  cpp_run.sh  py_run.sh  requirements.txt  setup.sh
dstree/: calc_utils.c  calc_utils.h  dstree.c  dstree_file_buffer.c  dstree_file_buffer.h  dstree_file_buffer_manager.c  dstree_file_buffer_manager.h  dstree_file_loaders.c  dstree_file_loaders.h  dstree_index.c  dstree_index.h  dstree_node.c  dstree_node.h  dstree_node_split.c  dstree_node_split.h  dstree_query_engine.c  dstree_query_engine.h  globals.h  pqueue.c  pqueue.h  systemutils.h  ts.c  ts.h  udebug.cpp  udebug.hpp  udeclare.cpp  udeclare.hpp  utils.c  utils.h
ps/core/: aqp.py  histogram.py  predicate.py
ps/solver/: indexer.py  naive.py  progressive.py
ps/util/: debug.py  declare.py  misc.py  pg.py
resource/: postgres.py  tpch.py
test/: main.cpp  main.py
